Fix project edit menu overflowing on bottom (#277)
* Fix project edit menu overflowing on bottom

* Better formatting

--- a/app/bay/page.module.css
+++ b/app/bay/page.module.css
@@ -49,7 +49,7 @@
 .editForm {
   display: none;
   background: white;
-  padding: 1.5rem;
+  padding: 0 1.5rem 1.5rem 1.5rem;
   border-radius: 0.5rem;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   height: auto;
